--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,7 @@
 
       <section>
         <div id="title">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
-          <p>{{ site.description | default: Hey There }}</p>
+          <h1>{{ site.title | default: Hey There }}</h1>
           <hr>
         </div>
 
