--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,6 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
           {% if site.show_downloads %}
             <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
             <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
@@ -33,7 +32,7 @@
 
       <section>
         <div id="title">
-          <h1>{{ site.title | default: Hey There }}</h1>
+          <h1>{Hey There}</h1>
           <hr>
         </div>
 
