--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
       <section>
         <div id="title">
-          <h1>{Hey There}</h1>
+          <h1>Hey There &#128075;</h1>
           <hr>
         </div>
 
