--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,18 +36,18 @@
           <hr>
         </div>
 
-        <p align="center" style="color:grey;" class="lead">I am Rohit Thapliyal, final year CS undergrad from Graphic Era University, Dehradun. <br> Python developer, familiar with Django and Flask web frameworks.</p>
+        <p align="center" style="color:grey;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Python developer, familiar with Django and Flask web frameworks.</p>
         <br>
         <ul class="text-left" style="list-style-position: inside">
-          <li><a style="color:blue;" href="https://github.com/rohitthapliyal2000">GitHub</a> </li>
-          <li> <a style="color:blue;" href="https://drive.google.com/file/d/1V__a8OoT2RJWmzxgGiufsC3qGUZH0SzA/view?usp=sharing">Resume</a></li> 
-          <li><a style="color:blue;" href="https://www.linkedin.com/in/rohit-thapliyal-515b5913a/">LinkedIn</a></li>
-          <li><a style="color:blue;" href="https://angel.co/rohit-thapliyal-2">Angellist</a></li>
-          <li><a style="color:blue;" href="https://www.codechef.com/users/rohitthapliyal">Codechef</a></li>
+          <li><a style="color:blue;" href="https://github.com/sachin-bisht">GitHub</a> </li>
+          <li> <a style="color:blue;" href="https://drive.google.com/file/d/1B2EqsP4u6Khr0TAXIxCi3NzfubWaD-IR/view?usp=sharing">Resume</a></li> 
+          <li><a style="color:blue;" href="https://linkedin.com/in/sachin-bisht/">LinkedIn</a></li>
+          <li><a style="color:blue;" href="https://angel.co/sachin-bisht-1">Angellist</a></li>
+          <li><a style="color:blue;" href="https://www.codechef.com/users/sachinbisht939">Codechef</a></li>
         </ul>
 
         <br>
-        <p align="center"> <span style="color:grey;"> E-mail ID: <span style="color:black"> rohitthapliyal2000@gmail.com </span> </span> </p>
+        <p align="center"> <span style="color:grey;"> E-mail ID: <span style="color:black"> sachinbisht939@gmail.com </span> </span> </p>
         </p>
 
       </section>
