--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
           <hr>
         </div>
 
-        <p align="center" style="color:grey;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Python developer, familiar with Django and Flask web frameworks.</p>
+        <p align="center" style="font-size: 20px;color:grey;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Python developer, familiar with Django and Flask web frameworks.</p>
         <br>
         <ul class="text-left" style="list-style-position: inside">
           <li><a style="color:blue;" href="https://github.com/sachin-bisht">GitHub</a> </li>
