--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,15 +39,15 @@
         <p align="center" style="font-size: 20px;color:white;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Python developer, familiar with Django and Flask web frameworks.</p>
         <br>
         <ul class="text-left" style="list-style-position: inside">
-          <li><a style="color:yellow;" href="https://github.com/sachin-bisht">GitHub</a> </li>
-          <li> <a style="color:yellow;" href="https://drive.google.com/file/d/1B2EqsP4u6Khr0TAXIxCi3NzfubWaD-IR/view?usp=sharing">Resume</a></li> 
-          <li><a style="color:yellow;" href="https://linkedin.com/in/sachin-bisht/">LinkedIn</a></li>
-          <li><a style="color:yellow;" href="https://angel.co/sachin-bisht-1">Angellist</a></li>
-          <li><a style="color:yellow;" href="https://www.codechef.com/users/sachinbisht939">Codechef</a></li>
+          <li><a style="font-size: 20px;color:yellow;" href="https://github.com/sachin-bisht">GitHub</a> </li>
+          <li> <a style="font-size: 20px;color:yellow;" href="https://drive.google.com/file/d/1B2EqsP4u6Khr0TAXIxCi3NzfubWaD-IR/view?usp=sharing">Resume</a></li> 
+          <li><a style="font-size: 20px;color:yellow;" href="https://linkedin.com/in/sachin-bisht/">LinkedIn</a></li>
+          <li><a style="font-size: 20px;color:yellow;" href="https://angel.co/sachin-bisht-1">Angellist</a></li>
+          <li><a style="font-size: 20px;color:yellow;" href="https://www.codechef.com/users/sachinbisht939">Codechef</a></li>
         </ul>
 
         <br>
-        <p align="center"> <span style="color:white;"> E-mail ID: <span style="color:grey"> sachinbisht939@gmail.com </span> </span> </p>
+        <p align="center"> <span style="font-size: 20px;color:white;"> E-mail ID: <span style="font-size: 20px;color:grey"> sachinbisht939@gmail.com </span> </span> </p>
         </p>
 
       </section>
