--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           <h1>Hey There &#128075;</h1>
         </div>
 
-        <p align="center" style="font-size: 20px;color:white;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Python developer, familiar with Django and Flask web frameworks.</p>
+        <p align="center" style="font-size: 20px;color:white;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Proficient in data structures and algorithms. <br>Backend developer with knowledge of Django and Flask web frameworks.</p>
         <br>
         <ul class="text-left" style="list-style-position: inside">
           <li><a style="font-size: 20px;color:yellow;" href="https://github.com/sachin-bisht">GitHub</a> </li>
