--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,17 +38,17 @@
 
         <p align="center" style="font-size: 20px;color:white;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Proficient in data structures and algorithms. <br>Backend developer with knowledge of Django and Flask web frameworks.</p>
         <br>
-<!--         <ul class="text-left" style="list-style-position: inside">
+        <ul class="text-left" style="list-style-position: inside">
           <li><a style="font-size: 20px;color:yellow;" href="https://github.com/sachin-bisht">GitHub</a> </li>
           <li> <a style="font-size: 20px;color:yellow;" href="https://drive.google.com/file/d/1iksixojoqSZPZBJ9oqj9I-GQx2VMcoto/view?usp=sharing">Resume</a></li> 
           <li><a style="font-size: 20px;color:yellow;" href="https://linkedin.com/in/sachin-bisht/">LinkedIn</a></li>
           <li><a style="font-size: 20px;color:yellow;" href="https://angel.co/sachin-bisht-1">Angellist</a></li>
           <li><a style="font-size: 20px;color:yellow;" href="https://www.codechef.com/users/sachinbisht939">Codechef</a></li>
-        </ul> -->
-        <i class="fa fa-linkedin" style="font-size:48px;color:blue" href="https://linkedin.com/in/sachin-bisht/></i>
-
+        </ul>
         <br>
         <p align="center"> <span style="font-size: 20px;color:white;"> E-mail ID: <span style="font-size: 20px;color:grey"> sachinbisht939@gmail.com </span> </span> </p>
+        </p>
+        <p align="center"><i class="fa fa-linkedin" style="font-size:48px;color:blue" href="https://linkedin.com/in/sachin-bisht/></i>
         </p>
 
       </section>
