--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,9 +48,8 @@
         <br>
         <p align="center"> <span style="font-size: 20px;color:white;"> E-mail ID: <span style="font-size: 20px;color:grey"> sachinbisht939@gmail.com </span> </span> </p>
         </p>
-        <p align="center"><i class="fa fa-linkedin" style="font-size:48px;color:blue" href="https://linkedin.com/in/sachin-bisht/></i>
-        </p>
-
+        <a class="fa fa-linkedin-square" style="font-size:40px;color:#0077B5" href="https://linkedin.com/in/sachin-bisht/"></a>
+      
       </section>
 
     </div>
