--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
         <p align="center"> <span style="font-size: 20px;color:white;"> E-mail ID: <span style="font-size: 20px;color:grey"> sachinbisht939@gmail.com </span> </span> </p>
         </p>
         <a class="fa fa-linkedin-square" style="font-size:40px;color:#0077B5" href="https://linkedin.com/in/sachin-bisht/"></a>
+        <a class="fa fa-linkedin-square" style="font-size:40px;color:#0077B5" href="https://linkedin.com/in/sachin-bisht/"></a>
       
       </section>
 
