--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 
         <p align="center" style="font-size: 20px;color:white;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Proficient in data structures and algorithms. <br>Backend developer with knowledge of Django and Flask web frameworks.</p>
         <br>
-        <ul class="text-left" style="list-style-position: inside">
+<!--         <ul class="text-left" style="list-style-position: inside">
           <li><a style="font-size: 20px;color:yellow;" href="https://github.com/sachin-bisht">GitHub</a> </li>
           <li> <a style="font-size: 20px;color:yellow;" href="https://drive.google.com/file/d/1iksixojoqSZPZBJ9oqj9I-GQx2VMcoto/view?usp=sharing">Resume</a></li> 
           <li><a style="font-size: 20px;color:yellow;" href="https://linkedin.com/in/sachin-bisht/">LinkedIn</a></li>
@@ -47,10 +47,14 @@
         </ul>
         <br>
         <p align="center"> <span style="font-size: 20px;color:white;"> E-mail ID: <span style="font-size: 20px;color:grey"> sachinbisht939@gmail.com </span> </span> </p>
+        </p> -->
+        
+        <p align="center">
+          <a class="fa fa-github-square" style="font-size:48px;color:black" href="https://github.com/sachin-bisht"></a>
+          <a class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#0077B5" href="https://linkedin.com/in/sachin-bisht/"></a>
+          <a class="fa fa-angellist" style="padding-left:25px; font-size:48px;color:black" href="https://angel.co/sachin-bisht-1"></a>
+          
         </p>
-        <a class="fa fa-linkedin-square" style="font-size:40px;color:#0077B5" href="https://linkedin.com/in/sachin-bisht/"></a>
-        <a class="fa fa-linkedin-square" style="font-size:40px;color:#0077B5" href="https://linkedin.com/in/sachin-bisht/"></a>
-      
       </section>
 
     </div>
