--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,11 @@
             <li class="title">DOWNLOADS</li>
           {% endif %}
         </nav>
-      </div><!-- end header -->
+        <p align="center" style="font-size: 20px;color:yellow;" class="lead">
+          <a style="font-size: 20px;color:yellow;" href="https://drive.google.com/file/d/1iksixojoqSZPZBJ9oqj9I-GQx2VMcoto/view?usp=sharing">Resume</a>
+          
+        </p>
+    </div><!-- end header -->
 
     <div class="wrapper">
 
@@ -37,11 +41,7 @@
         </div>
 
         <p align="center" style="font-size: 20px;color:white;" class="lead">I am Sachin Bisht, final year CS undergrad from Graphic Era University, Dehradun. <br> Proficient in data structures and algorithms. <br>Backend developer with knowledge of Django and Flask web frameworks.</p>
-        <br>
-        <ul class="text-left" style="list-style-position: inside">
-                <li> <a style="font-size: 20px;color:yellow;" href="https://drive.google.com/file/d/1iksixojoqSZPZBJ9oqj9I-GQx2VMcoto/view?usp=sharing">Resume</a></li> 
-      <li><a style="font-size: 20px;color:yellow;" href="https://www.codechef.com/users/sachinbisht939">Codechef</a></li>
-        </ul>
+        
         <br>
         <p align="center" style="font-size: 20px;color:white;" class="lead"> Contact me:
         </p>
