--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
             <li class="title">DOWNLOADS</li>
           {% endif %}
         </nav>
-        <p align="center" style="font-size: 20px;color:yellow;" class="lead">
+        <p align="right" style="font-size: 20px;color:yellow;" class="lead">
           <a style="font-size: 20px;color:yellow;" href="https://drive.google.com/file/d/1iksixojoqSZPZBJ9oqj9I-GQx2VMcoto/view?usp=sharing">Resume</a>
           
         </p>
